Fix navbar z-index

--- a/src/assets/stylesheets/main.css
+++ b/src/assets/stylesheets/main.css
@@ -203,6 +203,7 @@ body {
  * mobile viewport.
  *
  * 1. Fix to top of viewport.
+ * 2. Make sure it's on top of other elements (especially the map iframe).
  */
 
 .navbar {
@@ -213,6 +214,7 @@ body {
   position: fixed; /* 1 */
   top: 0; /* 1 */
   width: 100%; /* 1 */
+  z-index: 1; /* 2 */
 }
 
 /**
